--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,6 @@
 .read-the-docs {
   color: #888;
 }
+.Nabbar {
+  margin-bottom: 3rem; /* Apply margin to create space (adjust the value as needed) */
+}
