arranging the file

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,7 @@
 .Nabbar {
   margin-bottom: 3rem; /* Apply margin to create space (adjust the value as needed) */
 }
+.red-outline {
+  border: 1px solid red;
+  color: red;
+}
